# Segmentation_ischemic_stroke

./: .dvcignore  .gitignore  .pre-commit-config.yaml  COLAB_SETUP.md  README.md  colab_setup.sh  dvc.yaml  environment.yml  pyproject.toml  requirements.txt  stroke-segmentation-u-net.ipynb
.dvc/: config
brain_stroke_segmentation/: __init__.py  commands.py  data_loader.py  dataset.py  inference.py  lightning_module.py  metrics.py  mlflow_serving.py  model.py  onnx_converter.py  tensorrt_converter.py  train.py  transforms.py  utils.py  visualization.py
configs/: config.yaml
configs/data/: data.yaml
configs/infer/: infer.yaml
configs/logging/: logging.yaml
configs/model/: model.yaml
configs/production/: production.yaml
configs/train/: train.yaml
scripts/: convert_to_tensorrt.sh
web/: README.md  docker-compose.yml  setup.sh
web/backend/: .env.example  =0.15.0  Dockerfile  db.sqlite3  logging_config.py  requirements.txt  wsgi_gunicorn.py
web/backend/api/: admin.py  apps.py  inference_utils.py  models.py  ready.py  serializers.py  tests.py  urls.py  views.py
web/backend/api/migrations/: 0001_initial.py
web/backend/backend/: __init__.py  settings.py  urls.py
web/frontend/: nginx.conf
web/frontend/public/: index.html
web/frontend/src/: App.css  App.js  index.css
web/frontend/src/components/: ArticleSearch.js  ImageUpload.js  Navigation.js  PredictionResult.js
web/frontend/src/pages/: ArticlesPage.js  DemoPage.js  DocsPage.js  HomePage.js
web/frontend/src/services/: api.js
web/frontend/src/styles/: APIPage.css  ArticleSearch.css  ArticlesPage.css  DemoPage.css  DocsPage.css  (+4 more)
(+3 files in other folders)
